--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
         "php": ">=7.2.0",
         "guzzlehttp/streams": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
-        "composer/semver": "^3.2"
+        "composer/semver": "^3.2",
+        "google/apiclient": "^2.0"
     },
     "require-dev": {
+    	"google/apiclient": "^2.0",
         "phpunit/phpunit": "^8",
         "php-coveralls/php-coveralls": "dev-master",
         "php-mock/php-mock-phpunit": "^2.6"
